--- a/bower.json
+++ b/bower.json
@@ -17,7 +17,8 @@
     "angular-ui-router": "~0.2.10",
     "p5js": "~0.3.14",
     "leapjs": "~0.6.2",
-    "tone": "*"
+    "tone": "*",
+    "angular-rangeslider": "~0.0.11"
   },
   "devDependencies": {
     "angular-mocks": ">=1.2.*",
